# HeatDiffusionCellDevsModel

./: .gitattributes  .gitignore  CMakeLists.txt  HeatDiffusionCellDevsModel.docx  HeatDiffusion_DEVSmodelsForm.docx  README.md  README.txt  build_sim.sh  makefile  run_base_scenario.sh  run_hotter_source_scenario.sh  run_nonuniform_initial_scenario.sh  run_reduced_cooling_scenario.sh
Simulation_videos/: base.webm  hotter.webm  nonuniform.webm  reduced_cooling.webm
atomics/: heat_diffusion_state.hpp  trigger_generator.hpp
config/: grid_base_config.json  grid_hotter_source_config.json  grid_nonuniform_initial_config.json  grid_reduced_cooling_config.json  heat_config_base_scenario.json  heat_config_hotter_source.json  heat_config_nonuniform_initial.json  heat_config_reduced_cooling.json  heat_diffusionVisualization_config.json  heat_diffusion_base_scenario_config.json  heat_diffusion_baseline_viewer_config.json  heat_diffusion_hotter_source_config.json  heat_diffusion_hotter_source_viewer_config.json  heat_diffusion_nonuniform_initial_config.json  heat_diffusion_nonuniform_initial_viewer_config.json  heat_diffusion_reduced_cooling_config.json  heat_diffusion_reduced_cooling_viewer_config.json
include/: heat_diffusion_cell.hpp  heat_diffusion_top.hpp  heat_surface_coupled.hpp  trigger_generator.hpp
log/: grid_base_log.csv  grid_hotter_source_log.csv  grid_nonuniform_initial_log.csv  grid_reduced_cooling_log.csv  heat_diffusion_base_scenario_log.csv  heat_diffusion_hotter_source_log.csv  heat_diffusion_nonuniform_initial_log.csv  heat_diffusion_reduced_cooling_log.csv
main/: CMakeLists.txt  main.cpp
scripts/: README.txt  run_baseline_heat_diffusion.bat  run_baseline_heat_diffusion.ps1  run_heat_diffusion.bat  run_heat_diffusion.ps1  run_hotter_source_heat_diffusion.bat  run_hotter_source_heat_diffusion.ps1  run_nonuniform_initial_heat_diffusion.bat  run_nonuniform_initial_heat_diffusion.ps1  run_reduced_cooling_heat_diffusion.bat  run_reduced_cooling_heat_diffusion.ps1
simulation_results/: heat_diffusion_baseline_viewer_config_grid_log.csv  heat_diffusion_baseline_viewer_config_grid_log_viewer.csv
top_model/: heat_diffusion_top.hpp  heat_surface_coupled.hpp  main.cpp
